WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55159
Variable-sized allocation (but still capped at 64 bytes)
https://bugs.webkit.org/show_bug.cgi?id=55159
Summary
Variable-sized allocation (but still capped at 64 bytes)
Geoffrey Garen
Reported
2011-02-24 10:58:32 PST
Variable-sized allocation (but still capped at 64 bytes)
Attachments
Patch
(12.70 KB, patch)
2011-02-24 11:11 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(14.31 KB, patch)
2011-02-24 13:21 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(13.95 KB, patch)
2011-03-01 15:19 PST
,
Geoffrey Garen
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-02-24 11:11:02 PST
Created
attachment 83683
[details]
Patch
Darin Adler
Comment 2
2011-02-24 11:51:18 PST
Comment on
attachment 83683
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=83683&action=review
> Source/JavaScriptCore/runtime/JSCell.h:438 > + if (!result) > + result = allocateSlowCase(bytes); > + ASSERT(result); > + return result;
I like early return better than this construction.
> Source/JavaScriptCore/runtime/MarkedSpace.h:108 > - SizeClass m_sizeClass; > + SizeClass m_precise[preciseCount];
I don’t think that an adjective like precise makes a good name for a data member.
Build Bot
Comment 3
2011-02-24 12:02:43 PST
Attachment 83683
[details]
did not build on win: Build output:
http://queues.webkit.org/results/7981485
Geoffrey Garen
Comment 4
2011-02-24 13:21:31 PST
Created
attachment 83708
[details]
Patch
Geoffrey Garen
Comment 5
2011-02-24 14:58:54 PST
Committed
r79627
: <
http://trac.webkit.org/changeset/79627
>
Eric Seidel (no email)
Comment 6
2011-02-25 00:06:08 PST
Worker tests are crashing since around this time: Thread 8 Crashed: WebCore: Worker 0 com.apple.JavaScriptCore 0x00000001002b3907 JSC::MarkedBlock::destroy(JSC::MarkedBlock*) + 39 (MarkedBlock.cpp:44) 1 com.apple.JavaScriptCore 0x000000010022ce48 JSC::MarkedSpace::freeBlocks(WTF::DoublyLinkedList<JSC::MarkedBlock>&) + 392 (MarkedSpace.cpp:66) 2 com.apple.JavaScriptCore 0x000000010022d593 JSC::MarkedSpace::shrink() + 163 (MarkedSpace.cpp:103) 3 com.apple.JavaScriptCore 0x0000000100167ced JSC::Heap::destroy() + 109 (Heap.cpp:84) 4 com.apple.WebCore 0x00000001013c43fc WebCore::WorkerScriptController::~WorkerScriptController() + 76 (WorkerScriptController.cpp:65) 5 com.apple.WebCore 0x00000001013c7802 WebCore::WorkerThreadShutdownFinishTask::performTask(WebCore::ScriptExecutionContext*) + 50 (WorkerScriptController.h:48) 6 com.apple.WebCore 0x00000001013c3841 WebCore::WorkerRunLoop::runInMode(WebCore::WorkerContext*, WebCore::ModePredicate const&) + 385 (WorkerRunLoop.cpp:163) 7 com.apple.WebCore 0x00000001013c3a1e WebCore::WorkerRunLoop::run(WebCore::WorkerContext*) + 238 (WorkerRunLoop.cpp:133) 8 com.apple.WebCore 0x00000001013c71c0 WebCore::WorkerThread::workerThread() + 992 (WorkerThread.cpp:143) 9 libSystem.B.dylib 0x00007fff859e3456 _pthread_start + 331 10 libSystem.B.dylib 0x00007fff859e3309 thread_start + 13 Either this, or
bug 55100
is to blame.
Geoffrey Garen
Comment 7
2011-03-01 15:19:18 PST
Created
attachment 84306
[details]
Patch
Geoffrey Garen
Comment 8
2011-03-01 15:19:43 PST
Comment on
attachment 84306
[details]
Patch Sam reviewed this.
Geoffrey Garen
Comment 9
2011-03-01 15:36:57 PST
Committed
r80052
: <
http://trac.webkit.org/changeset/80052
>
WebKit Review Bot
Comment 10
2011-03-01 16:33:25 PST
http://trac.webkit.org/changeset/80052
might have broken Qt Linux Release The following tests are not passing: fast/canvas/canvas-strokePath-gradient-shadow.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug